--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello the world</h1>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+ <h3>hello the world</h3>
+</body>
+</html>
