--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin:auto;
             width:62px;
             height:38px;
-            background:url("img/OrangeButton.png") no-repeat center center;
+            background:url("/img/OrangeButton.png") no-repeat center center;
             background-size:62px 38px;
             cursor:pointer;
 
