--- a/app/index.html
+++ b/app/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
-    <script>
-        (function(){
-            document.addEventListener("DOMContentLoaded",function(){
-                var html=document.documentElement;
-                var windowWidth=html.clientWidth;
-                if(windowWidth>640)windowWidth=640;
-                html.style.fontSize=windowWidth/6.4+'px';
-            },false);
-        })()
-    </script>
+    <!--<script>-->
+        <!--(function(){-->
+            <!--document.addEventListener("DOMContentLoaded",function(){-->
+                <!--var html=document.documentElement;-->
+                <!--var windowWidth=html.clientWidth;-->
+                <!--if(windowWidth>640)windowWidth=640;-->
+                <!--html.style.fontSize=windowWidth/6.4+'px';-->
+            <!--},false);-->
+        <!--})()-->
+    <!--</script>-->
+
     <title>游戏开始</title>
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
     <link href="css/public.css" rel="stylesheet" type="text/css">
@@ -32,5 +33,6 @@
 <script src="js/factory/factory.js"></script>
 <script src="js/constant/constant.js"></script>
 <script src="js/directive/modal.js"></script>
+<script src="js/setWidth.js"></script>
 </body>
 </html>
