--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
+    <base href="/">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
-<h1>hello the world</h1>
+<div ui-view></div>
+
 </body>
 <script src=""></script>
+<script src="framework/jquery/jquery-3.0.0.js"></script>
 <script src="framework/angularJS-1.3.0.14/angular.js"></script>
+<script src="framework/angularJS-1.3.0.14/angular-ui-router.js"></script>
+<script src="framework/angularJS-1.3.0.14/angular-animate.js"></script>
+<script src="framework/oclazyLoad/ocLazyLoad.js"></script>
+<script src="js/router.js"></script>
+<script src="js/directive/login/login.js"></script>
 </html>
