--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 </body>
 <script src=""></script>
-<script src="home/framework/jquery/jquery-3.0.0.js"></script>
-<script src="home/framework/angularJS-1.3.0.14/angular.js"></script>
-<script src="home/framework/angularJS-1.3.0.14/angular-ui-router.js"></script>
-<script src="home/framework/angularJS-1.3.0.14/angular-animate.js"></script>
-<script src="home/framework/oclazyLoad/ocLazyLoad.js"></script>
-<script src="home/js/router.js"></script>
-<script src="home/js/directive/login/login.js"></script>
+<script src="../framework/jquery/jquery-3.0.0.js"></script>
+<script src="../framework/angularJS-1.3.0.14/angular.js"></script>
+<script src="../framework/angularJS-1.3.0.14/angular-ui-router.js"></script>
+<script src="../framework/angularJS-1.3.0.14/angular-animate.js"></script>
+<script src="../framework/oclazyLoad/ocLazyLoad.js"></script>
+<script src="../js/router.js"></script>
+<script src="../js/directive/login/login.js"></script>
 </html>
